event galary added

--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -386,7 +386,9 @@
         <b><hr  color="red" style="margin-left:0px; height: 2%;width:45%;"></b>
         
         
-        <a href="mailto:citsci@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> citsci@kfri.res.in </a>, <a href="mailto:ccsbi@kfri.res.in" style="color: black;">ccsbi@kfri.res.in </a> 
+        <a href="mailto:citsci@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> citsci@kfri.res.in </a>, 
+        <br>
+        <a href="mailto:ccsbi@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> ccsbi@kfri.res.in </a> 
         <br>
 
         <span><a href="tel: 04872690272" style="color: black;"><i class="bi bi-telephone"></i> 04872690272</a></span>
@@ -433,14 +435,4 @@
   
 
 </footer>
-<script>
-  $(document).ready(function() {
-
-    $(".nav a").on("click", function(){
-      $(".nav").find(".active").removeClass("active");
-      $(this).parent().addClass("active");
-    });
-
-  }); 
-  </script>
 {% endblock content %}
