--- a/CcsbiProject/templates/Event1.html
+++ b/CcsbiProject/templates/Event1.html
@@ -1,16 +1,170 @@
 
-{% extends "base.html" %}
 {% load static %}
 
 {% block content %}
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+<style>
+/* Importing fonts from Google */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+.owl-carousel .owl-item {
+    transition: all 0.3s ease-in-out;
+}
+
+.owl-carousel .owl-item .card {
+    padding: 10px;
+    position: relative;
+}
+
+.owl-carousel .owl-stage-outer {
+    overflow-y: auto !important;
+    padding-bottom: 40px;
+}
+
+.owl-carousel .owl-item img {
+    height: 200px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.owl-carousel .owl-item .card .name {
+    position: absolute;
+    bottom: -20px;
+    left: 33%;
+    color: #101c81;
+    font-size: 1.1rem;
+    font-weight: 600;
+    background-color: aquamarine;
+    padding: 0.3rem 0.4rem;
+    border-radius: 5px;
+    box-shadow: 2px 3px 15px #3c405a;
+}
+
+.owl-carousel .owl-item .card {
+    opacity: 0.2;
+    transform: scale3d(0.8, 0.8, 0.8);
+    transition: all 0.3s ease-in-out;
+}
+
+.owl-carousel .owl-item.active.center .card {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+}
+
+.owl-carousel .owl-dots {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+    height: 20px;
+    background: #2a6ba3 !important;
+    border-radius: 2px !important;
+    opacity: 0.8;
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+    height: 13px;
+    width: 13px;
+    opacity: 1;
+    transform: translateY(2px);
+    background: #83b8e7 !important;
+}
+
+@media(min-width: 480.6px) and (max-width: 575.5px) {
+    .owl-carousel .owl-item .card .name {
+        left: 24%;
+    }
+}
+
+@media(max-width: 360px) {
+    .owl-carousel .owl-item .card .name {
+        left: 30%;
+    }
+}
+</style>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
+
+<nav class="navbar fixed-top navbar-expand-lg  navbar-dark bg-dark" style="background: linear-gradient(to right, rgb(27,63,96) , rgb(12,97,125));">
+    <div class="container-fluid" style="width: 130%; padding: 0px;">
+      <button
+        class="navbar-toggler navbar-toggler-right"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarExample01"
+        aria-controls="navbarResponsive"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="navbar-toggler-icon"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01" style="margin-left: 25%;">
+
+
+
+
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: 20px;">
+          
+
+         
+
+          <!--!-->
+          <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
+        
+          <li class="nav-item {% if navbar == 'home' %} active {% endif %}">
+            <a class="nav-link" aria-current="page" href="/home">Home</a>
+          </li>
+          <li class="nav-item {% if navbar == 'project' %} active {% endif %}">
+            <a class="nav-link" href="/projects">Projects</a>
+          </li>
+          <li class="nav-item {% if navbar == 'network' %} active {% endif %}">
+            <a class="nav-link" href="/Networks">Networks</a>
+          </li>
+         <!--  <li class="nav-item">
+            <a class="nav-link" href="/Datasets">Data Sets</a>
+          </li>!-->
+          <li class="nav-item {% if navbar == 'resource' %} active {% endif %}">
+            <a class="nav-link" href="/Resources">Resources </a>
+          </li>                  
+          <li class="nav-item {% if navbar == 'capacity' %} active {% endif %}">
+            <a class="nav-link" href="/Capacity">Capacity Building</a>
+          </li>                    
+          <li class="nav-item {% if navbar == 'event' %} active {% endif %}">
+            <a class="nav-link" href="/Events">Events</a>
+          </li>                  
+          <li class="nav-item {% if navbar == 'opportunities' %} active {% endif %}">
+            <a class="nav-link" href="/Opportunities">Opportunities</a>
+          </li>
+          <li class="nav-item {% if navbar == 'contact' %} active {% endif %}">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+
+
+              
+        </ul>
+      </div>
+    </div>
+  </nav>
 <br>
 <br>
 <br>
-<div class="container">
-    <br>
+<br>
+<div class="container"> 
     <p class="headings text-center" >Biodiversity assessment workshop & introduction to ‘iNaturalist’ - a citizen science platform - Vivekananda College Kizhoor Kunnamkulam</p>
     <p class=" text-center">Citizen Science workshop - Vivekananda College Kizhoor</p>
     <div class="jumbotron" style=" padding-bottom: 10px !important; padding-top: 10px !important;">
@@ -24,7 +178,7 @@
           </blockquote>
       </div>
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        Observation is the key to understanding biodiversity around us. Observing and recording biodiversity advances our understanding of how to protect its species. 
+        ‘Observation is the key to understanding biodiversity around us. Observing and recording biodiversity advances our understanding of how to protect its species. 
         It will be easier to manage and conserve the biodiversity around us if we upskill our abilities to understand nature events and identification of various species.
 
     </p>
@@ -42,5 +196,138 @@
         Long-term updates to this project will be made through field surveys and online revisions on a regular basis.
     </p>
 
+
+
+
+    <div class="owl-carousel owl-theme mt-5">
+        <div class="owl-item">
+            <div class="card">
+                <div class="img-card">
+                    <img src="{% static '/images/Event_2.JPG' %}" alt="">
+                </div>
+
+            </div>
+        </div>
+        <div class="owl-item">
+            <div class="card">
+                <div class="img-card">
+                    <img src="{% static '/images/Event_3.JPG' %}" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="owl-item">
+            <div class="card">
+                <div class="img-card">
+                    <img src="{% static '/images/Event_4.JPG' %}" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="owl-item">
+            <div class="card">
+                <div class="img-card">
+                    <img src="{% static '/images/Event_5.JPG' %}" alt="">
+                </div>
+
+            </div>
+        </div>
+        <div class="owl-item">
+            <div class="card">
+                <div class="img-card">
+                    <img src="{% static '/images/Event_6.JPG' %}" alt="">
+                </div>
+
+            </div>
+        </div>
+
+    </div>
 </div>
+
+<br>
+<b><hr ></b>
+<footer class="page-footer font-small ">
+  <div class="container">
+    <div class="row">
+    
+      <div class="col-sm-3" >
+        <p class="headings">Get In Touch</p>
+        <b><hr  color="red" style="margin-left:0px; height: 2%;width:45%;"></b>
+        
+        
+        <a href="mailto:citsci@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> citsci@kfri.res.in </a>, 
+        <br>
+        <a href="mailto:ccsbi@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> ccsbi@kfri.res.in </a> 
+        <br>
+
+        <span><a href="tel: 04872690272" style="color: black;"><i class="bi bi-telephone"></i> 04872690272</a></span>
+        <br>
+        <span>
+          <a href="https://www.facebook.com/profile.php?id=100088452392023"><i class="bi bi-facebook"> </i></a>
+          &nbsp;
+          <a href="https://www.instagram.com/citsci_india/"><i class="bi bi-instagram"></i></a>
+          &nbsp;
+          <a href="https://www.youtube.com/channel/UCQOj_87QKImHsRJmUUrTsDg"><i class="bi bi-youtube"></i></a>
+          &nbsp;
+          
+        </span>
+
+      </div>
+      <div class="col-md-3" >
+          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+      </div>
+      <div class="col-sm-3" >
+        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+      </div>
+
+      <div class="col-sm-3" >
+        
+        <span>Centre for Citizen Science &
+
+          Biodiversity Informatics,
+        </span><br><span>
+          
+          Kerala Forest Research Institute
+          
+          Peechi P.O,  Pin- 680653
+        </span><br><span>
+          Thrissur , Kerala, India.
+
+        
+      </div>
+    </div>
+    <br>
+
+
+
+  </div>
+  
+
+</footer>
+
+
+<script>
+$(document).ready(function () {
+    var silder = $(".owl-carousel");
+    silder.owlCarousel({
+        autoplay: true,
+        autoplayTimeout: 3000,
+        autoplayHoverPause: false,
+        items: 1,
+        stagePadding: 20,
+        center: true,
+        nav: false,
+        margin: 50,
+        dots: true,
+        loop: true,
+        responsive: {
+            0: { items: 1 },
+            480: { items: 2 },
+            575: { items: 2 },
+            768: { items: 2 },
+            991: { items: 3 }
+        }
+    });
+});
+</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 {% endblock content %}
