--- a/CcsbiProject/templates/event2.html
+++ b/CcsbiProject/templates/event2.html
@@ -5,10 +5,12 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 <style>
 /* Importing fonts from Google */
@@ -19,7 +21,7 @@
 }
 
 .owl-carousel .owl-item .card {
-    padding: 30px;
+    padding: 10px;
     position: relative;
 }
 
@@ -96,11 +98,73 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
+
+<nav class="navbar fixed-top navbar-expand-lg  navbar-dark bg-dark" style="background: linear-gradient(to right, rgb(27,63,96) , rgb(12,97,125));">
+    <div class="container-fluid" style="width: 130%; padding: 0px;">
+      <button
+        class="navbar-toggler navbar-toggler-right"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarExample01"
+        aria-controls="navbarResponsive"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="navbar-toggler-icon"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01" style="margin-left: 25%;">
+
+
+
+
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: 20px;">
+          
+
+         
+
+          <!--!-->
+          <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
+        
+          <li class="nav-item {% if navbar == 'home' %} active {% endif %}">
+            <a class="nav-link" aria-current="page" href="/home">Home</a>
+          </li>
+          <li class="nav-item {% if navbar == 'project' %} active {% endif %}">
+            <a class="nav-link" href="/projects">Projects</a>
+          </li>
+          <li class="nav-item {% if navbar == 'network' %} active {% endif %}">
+            <a class="nav-link" href="/Networks">Networks</a>
+          </li>
+         <!--  <li class="nav-item">
+            <a class="nav-link" href="/Datasets">Data Sets</a>
+          </li>!-->
+          <li class="nav-item {% if navbar == 'resource' %} active {% endif %}">
+            <a class="nav-link" href="/Resources">Resources </a>
+          </li>                  
+          <li class="nav-item {% if navbar == 'capacity' %} active {% endif %}">
+            <a class="nav-link" href="/Capacity">Capacity Building</a>
+          </li>                    
+          <li class="nav-item {% if navbar == 'event' %} active {% endif %}">
+            <a class="nav-link" href="/Events">Events</a>
+          </li>                  
+          <li class="nav-item {% if navbar == 'opportunities' %} active {% endif %}">
+            <a class="nav-link" href="/Opportunities">Opportunities</a>
+          </li>
+          <li class="nav-item {% if navbar == 'contact' %} active {% endif %}">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+
+
+              
+        </ul>
+      </div>
+    </div>
+  </nav>
 <br>
 <br>
 <br>
-<div class="container">
-    <br>
+<br>
+<div class="container"> 
     <p class="headings text-center" >Biodiversity assessment workshop & introduction to ‘iNaturalist’ - a citizen science platform - Vivekananda College Kizhoor Kunnamkulam</p>
     <p class=" text-center">Citizen Science workshop - Vivekananda College Kizhoor</p>
     <div class="jumbotron" style=" padding-bottom: 10px !important; padding-top: 10px !important;">
@@ -177,6 +241,69 @@
 
     </div>
 </div>
+
+<br>
+<b><hr ></b>
+<footer class="page-footer font-small ">
+  <div class="container">
+    <div class="row">
+    
+      <div class="col-sm-3" >
+        <p class="headings">Get In Touch</p>
+        <b><hr  color="red" style="margin-left:0px; height: 2%;width:45%;"></b>
+        
+        
+        <a href="mailto:citsci@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> citsci@kfri.res.in </a>, 
+        <br>
+        <a href="mailto:ccsbi@kfri.res.in" style="color: black;"><i class="bi bi-envelope" ></i> ccsbi@kfri.res.in </a> 
+        <br>
+
+        <span><a href="tel: 04872690272" style="color: black;"><i class="bi bi-telephone"></i> 04872690272</a></span>
+        <br>
+        <span>
+          <a href="https://www.facebook.com/profile.php?id=100088452392023"><i class="bi bi-facebook"> </i></a>
+          &nbsp;
+          <a href="https://www.instagram.com/citsci_india/"><i class="bi bi-instagram"></i></a>
+          &nbsp;
+          <a href="https://www.youtube.com/channel/UCQOj_87QKImHsRJmUUrTsDg"><i class="bi bi-youtube"></i></a>
+          &nbsp;
+          
+        </span>
+
+      </div>
+      <div class="col-md-3" >
+          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+      </div>
+      <div class="col-sm-3" >
+        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+      </div>
+
+      <div class="col-sm-3" >
+        
+        <span>Centre for Citizen Science &
+
+          Biodiversity Informatics,
+        </span><br><span>
+          
+          Kerala Forest Research Institute
+          
+          Peechi P.O,  Pin- 680653
+        </span><br><span>
+          Thrissur , Kerala, India.
+
+        
+      </div>
+    </div>
+    <br>
+
+
+
+  </div>
+  
+
+</footer>
+
+
 <script>
 $(document).ready(function () {
     var silder = $(".owl-carousel");
