--- a/CcsbiProject/templates/Event1.html
+++ b/CcsbiProject/templates/Event1.html
@@ -178,7 +178,7 @@
           </blockquote>
       </div>
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        ‘Observation is the key to understanding biodiversity around us. Observing and recording biodiversity advances our understanding of how to protect its species. 
+        Observation is the key to understanding biodiversity around us. Observing and recording biodiversity advances our understanding of how to protect its species. 
         It will be easier to manage and conserve the biodiversity around us if we upskill our abilities to understand nature events and identification of various species.
 
     </p>
@@ -233,7 +233,7 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_6.JPG' %}" alt="">
+                    <img src="{% static '/images/Event_6.jpg' %}" alt="">
                 </div>
 
             </div>
