--- a/CcsbiProject/templates/Events.html
+++ b/CcsbiProject/templates/Events.html
@@ -140,7 +140,7 @@
 <br>
     <div class="row">
       <div class="col-md-6">
-        <div class="card text-center" >
+        <div class="card text-center"  style="height: 100%">
           <p class="headings">
             Citizen Science workshop - Vivekananda College, Kizhoor
           </p> 
@@ -164,19 +164,19 @@
       <div class="col-md-6">
         <div class="card text-center" >
           <p class="headings">
-            Citizen Science workshop - Vivekananda College Kizhoor
+            Institutional Biodiversity Assessment - Vallachira panchayath
           </p> 
           <p style=" color:#2A6FAB;">
-          August 16, 2022
+          October 31, 2021
           </p>
           <div class="card-body">
               
               <p class="text-justify" style="text-align: center;  font-family: Merriweather;font-size: 22px; ">
-                Centre for Citizen Science and Biodiversity Informatics (CCSBI) organised a workshop on ‘Biodiversity assessment and introduction 
-                to ‘iNaturalist’ a citizen science platform’. This workshop was arranged in collaboration with the Nature club, Sree Vivekananda College Kizhoor,
-                Kunnamkulam. And aimed at students and faculties who were interested in participating and organising biodiversity assessments in the campus. 
-                The workshop kicked off with a brief introduction to the ‘iNaturalist’ platform and the mobile application. 
-                <a href=""  class="btn btn-primary"  target="_blank">Know More</a>
+                The Institutional Biodiversity Assessment Program aims to map and understand the local biodiversity, with the goal of fostering a scientific mindset among 
+                the local population. The program collects data using the inaturalist platform, which allows for the documentation and mapping of biodiversity information. 
+                This platform helps people identify unknown species in the field and the recordings are automatically uploaded to a project within the Vallachira Panchayat boundary.
+                The program has turned people like students, housewives, labourers and others into citizen scientists with the help of smartphones, promoting local biodiversity assessment.
+                <a href="/Event2"  class="btn btn-primary" >Know More</a>
               </p>
               
           </div>
