--- a/CcsbiProject/templates/event2.html
+++ b/CcsbiProject/templates/event2.html
@@ -165,35 +165,27 @@
 <br>
 <br>
 <div class="container"> 
-    <p class="headings text-center" >Biodiversity assessment workshop & introduction to ‘iNaturalist’ - a citizen science platform - Vivekananda College Kizhoor Kunnamkulam</p>
-    <p class=" text-center">Citizen Science workshop - Vivekananda College Kizhoor</p>
-    <div class="jumbotron" style=" padding-bottom: 10px !important; padding-top: 10px !important;">
-        <blockquote class="blockquote">
-            <svg viewBox="0 0 512 512" width="100" title="quote-left" class="quote-icon">
-              <path d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z" />
-            </svg>
-            <p class="quote">Plans to protect air and water, wilderness and nature are in fact plans to protect man. </p>
-            <p class="author">— Stewart Udall</p>
-            <hr>
-          </blockquote>
-      </div>
+    <p class="headings text-center" >Institutional Biodiversity Assessment - Vallachira panchayath </p>
+    
+
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        ‘Observation is the key to understanding biodiversity around us. Observing and recording biodiversity advances our understanding of how to protect its species. 
-        It will be easier to manage and conserve the biodiversity around us if we upskill our abilities to understand nature events and identification of various species.
+      The Institutional Biodiversity Assessment Program aims to map and understand the local biodiversity, with the goal of fostering a scientific mindset among the local population. 
+      The program collects data using the inaturalist platform, which allows for the documentation and mapping of biodiversity information. This platform helps people identify unknown species in the field and the recordings are automatically uploaded to a project within the Vallachira Panchayat boundary. The program has turned people like students, housewives, labourers and others into citizen scientists with the help of smartphones, promoting local biodiversity assessment.
+
 
     </p>
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        Centre for Citizen Science and Biodiversity Informatics (CCSBI) organised a workshop on ‘Biodiversity assessment and introduction to ‘iNaturalist’ a citizen science platform’. 
-        This workshop was arranged in collaboration with the Nature club, Sree Vivekananda College Kizhoor, Kunnamkulam. And aimed at students and faculties 
-        who were interested in participating and organising biodiversity assessments in the campus. The workshop kicked off with a brief introduction to the ‘iNaturalist’ platform and 
-        the mobile application. 
+      The Vallachira Panchayat Biodiversity Documentation Program involved local stakeholders actively participating in the surveys. The survey was conducted in six groups, 
+      each led by an expert, covering different zones of the panchayat. The keen interest of volunteers helped to accelerate the documentation process. The documentation was done 
+      using smartphones and cameras, with photos taken on smartphones directly uploaded to the inaturalist app, and those taken with cameras uploaded later for identification.
     </p>
     <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        The students who were equipped with the theory and the application on their smartphones were divided into groups. Each group was spearheaded by a CCSBI team member, who advised students on documenting the sightings to the application. 
-        The submitted sightings were added to a project titled ‘Biodiversity of Sree Vivekananda College, Kunnamkulam’ in iNaturalist created by the centre. 
-    </p>
-    <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-        Long-term updates to this project will be made through field surveys and online revisions on a regular basis.
+      The single-day survey conducted in the Vallachira Panchayat documented 77 bird species, 63 butterfly species, 28 dragonfly and damselfly species, 10 reptile species,
+       7 amphibian species, and 2 mammal species. Most species were identified using the inaturalist app, while some observations required further confirmation from experts within 
+       the platform. The use of citizen science tools sparked an interest in biodiversity documentation among the local population, leading to continued contributions of observation data
+        and a steady influx of new information. 
+
+        
     </p>
 
 
@@ -233,7 +225,7 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_6.JPG' %}" alt="">
+                    <img src="{% static '/images/Event_6.jpg' %}" alt="">
                 </div>
 
             </div>
