--- a/CcsbiProject/templates/Events.html
+++ b/CcsbiProject/templates/Events.html
@@ -36,38 +36,13 @@
           <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
         </div>
       </div>
-      <div class="carousel-item ">
-        <img class="d-block w-100" src="{% static '/images/Event_2.JPG' %}" alt="Citizen Science workshop" href="https://thefruitbatproject.weebly.com/"  target="_blank">
-        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%; ">
-          <a href="/Event1"  style="text-decoration: none; color: white; ">Citizen Science workshop </a>
-            <br>
-            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
-        </div>
-
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{% static '/images/Event_3.JPG' %}" alt="Citizen Science workshop">
-        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%;">
-          <a href="/Event1"  style="text-decoration: none; color: white; ">Citizen Science workshop </a>
-            <br>
-            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{% static '/images/Event_4.JPG' %}" alt="Citizen Science workshop">
-        <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%;">
-          <a href="/Event1"   style="text-decoration: none; color: white; ">Citizen Science workshop </a>
-            <br>
-            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
-        </div>
-      </div>
 
       <div class="carousel-item">
         <img class="d-block w-100" src="{% static '/images/Event_6.jpg' %}" alt="Citizen Science workshop">
         <div class="carousel-caption d-none d-md-block" style=" font-family: Merriweather;font-size: 22px; font-weight: bold; background-color: black; opacity: 0.4; left:0%;right:0%;bottom: 0%; top:88%;">
-          <a href="/Event1"  style="text-decoration: none; color: white; ">Citizen Science workshop </a>
-            <br>
-            <a href="/Event1" style="text-decoration: none; color: white; ">Vivekananda College, Kizhoor.</a>
+          <a href="/Event2"  style="text-decoration: none; color: white; ">Institutional Biodiversity Assessment </a>
+            <br>  
+            <a href="/Event2" style="text-decoration: none; color: white; ">Vallachira panchayath.</a>
         </div>
       </div>
     </div>
