--- a/CcsbiProject/templates/event2.html
+++ b/CcsbiProject/templates/event2.html
@@ -191,11 +191,11 @@
 
 
 
-    <div class="owl-carousel owl-theme mt-5">
+    <div class="owl-carousel owl-theme mt-3">
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_2.JPG' %}" alt="">
+                    <img src="{% static '/images/event2_1.jpg' %}" alt="">
                 </div>
 
             </div>
@@ -203,33 +203,26 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_3.JPG' %}" alt="">
+                    <img src="{% static '/images/event2_2.jpg' %}" alt="">
                 </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_4.JPG' %}" alt="">
+                    <img src="{% static '/images/event2_3.jpg' %}" alt="">
                 </div>
             </div>
         </div>
         <div class="owl-item">
-            <div class="card">
-                <div class="img-card">
-                    <img src="{% static '/images/Event_5.JPG' %}" alt="">
-                </div>
+          <div class="card">
+              <div class="img-card">
+                  <img src="{% static '/images/event2_1.jpg' %}" alt="">
+              </div>
+          </div>
+      </div>
 
-            </div>
-        </div>
-        <div class="owl-item">
-            <div class="card">
-                <div class="img-card">
-                    <img src="{% static '/images/Event_6.jpg' %}" alt="">
-                </div>
-
-            </div>
-        </div>
+    
 
     </div>
 </div>
