images added to network and capacity building

--- a/CcsbiProject/templates/Capacity.html
+++ b/CcsbiProject/templates/Capacity.html
@@ -30,7 +30,7 @@
 
         </div>
         <div class="col-sm-4" >
-            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/Basics_citsci.JPG' %}" padding-left:25%  width="100%"    alt="...">
         </div>
 
     </div>
@@ -46,7 +46,7 @@
         </div>
         
         <div class="col-sm-4" >
-            <img src="{% static '/images/pollinator_count.svg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/taxonomy.png' %}" padding-left:25%  width="100%"    alt="...">
 
         </div>
 
@@ -65,7 +65,7 @@
 
         </div>
         <div class="col-sm-4" >
-            <img src="{% static '/images/public_library.jpg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/Data_management.jpg' %}" padding-left:25%  width="100%"    alt="...">
         </div>
 
     </div>
