--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -1,8 +1,66 @@
 {% extends "base.html" %}
 
+
 {% load static %}
 
+
+
 {% block content %}
+<style>
+
+
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+.imgtag{
+    width: 100%;
+    height: 100%; 
+}
+
+
+}
+
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 767px) {
+.imgtag{
+    width: 100%;
+    height: 100%; 
+}
+
+
+}
+
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 768px) and (max-width: 1024px){
+.imgtag{
+    width: 100%;
+    height: 100%; 
+}
+
+
+}
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px){
+.imgtag{
+    width: 100%;
+    height: 100%; 
+}
+
+}
+
+/* Media Query for Large screens */
+@media (min-width: 1281px) {
+.imgtag{
+    width: 100%;
+    height: 100%; 
+}
+
+
+
+}
+</style>
+
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href=" {% static '/css/main.css' %} ">
@@ -34,7 +92,7 @@
         </div>
         
         <div class="col-sm-4" >
-            <img src="{% static '/images/pollinator_count.svg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/clubtemp.png' %}"   class="imgtag"   alt="...">
 
         </div>
 
@@ -44,7 +102,7 @@
     <br>
     <div class="row">
         <div class="col-sm-4" >
-            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/academic research.svg' %}"  class="imgtag"    alt="...">
         </div>
         
         <div class="col-sm-8" >
@@ -72,7 +130,7 @@
         </div>
         
         <div class="col-sm-4" >
-            <img src="{% static '/images/ngo.jpg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/NGOs.png' %}"  width="100%"  height= "70%"  style=" margin-top:20%;"  alt="...">
 
         </div>
 
@@ -81,7 +139,7 @@
     <br>
     <div class="row">
         <div class="col-sm-4" >
-            <img src="{% static '/images/public_library.jpg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/library.png' %}" class="imgtag"   alt="...">
         </div>
         
         <div class="col-sm-8" >
