--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -110,7 +110,7 @@
 
             </h2>
             <p class="text-justify" id="text">
-                Academic/research institutions can contribute to citizen science in many ways, starting from assessing their campus biodiversity to planning and executing bioblitz-like events anywhere with the help of CCSBI. 
+                Academic/research institutions can contribute to citizen science in many ways, starting from assessing their campus biodiversity to planning and executing <a href="https://www.inaturalist.org/pages/bioblitz+guide" target="_blank">bioblitz</a>-like events anywhere with the help of CCSBI. 
                 Being a part of this network will be beneficial for its students and faculties as they can take part in workshops, training programmes and events conducted by CCSBI. 
             </p>
 
