--- a/CcsbiProject/templates/Projects.html
+++ b/CcsbiProject/templates/Projects.html
@@ -145,7 +145,7 @@
     opacity: 0.1;
   }
   #localbiodiversity{
-    height: 60%;
+    height: 55%;
   }
   #text{
     font-family: Merriweather;font-size: 18px;
@@ -230,7 +230,7 @@
         <p class="text-justify"  id="text">
           Our tropical climate makes our forests one of the most diverse ecosystems in the world. Effect of anthropogenic influences and climate change is concerning, 
           shouting out the need for frequent monitoring of biodiversity throughout our protected areas. A biodiversity database for each protected area is being developed 
-          by carrying out bioblitz-like surveys across the state. Locality specific databases will be highly beneficial for identifying hotspots and maintaining vulnerable habitats.
+          by carrying out <a href="https://www.inaturalist.org/pages/bioblitz+guide" target="_blank">bioblitz</a>-like surveys across the state. Locality specific databases will be highly beneficial for identifying hotspots and maintaining vulnerable habitats.
            Data will be published in public data repositories facilitating easy access for further research and activities.
         </p>
       </div>
@@ -249,6 +249,20 @@
           Urban wildlife is the least studied biological resource around us. We currently lack data on locality specific urban biodiversity.
            A ward-level urban-biodiversity database is being generated in collaboration with local governing bodies. 
           This data can be very useful in identifying biodiversity hotspots and creating efficient management policies.   
+        </p>
+
+      </div>
+
+    </div>
+    <div class="col-sm-6">
+      <p class="headings">Riverscaping</p>
+      <div class="card " id="localbiodiversity" >
+        <img href = "#" src ="{% static '/images/Riverscaping.jpg' %}" id="img"  style="height: 100%;">
+        <p class="text-justify" id="text">
+          The Riverscaping project is aimed at understanding the ecological and environmental importance of riparian habitats. 
+          It is one of the most biologically diverse ecotones which acts as a transition zone between two major ecosystems. 
+          Biodiversity assessments will be carried out across the urban and wild riverbanks of Kerala with the help of citizen scientists. 
+          Results will give a clear idea about the significance of natural river banks in determining its surrounding communities   
         </p>
 
       </div>
