--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -185,10 +185,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/Networks">Networks</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/Resources">Resources </a>
-              </li>                  
+              </li>                
               <li class="nav-item">
                 <a class="nav-link" href="/Capacity">Capacity Building</a>
               </li>                    
@@ -198,6 +195,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/Opportunities">Opportunities</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Resources">Resources </a>
+              </li>  
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact</a>
               </li>
@@ -228,7 +228,7 @@
 
             <br/>  
             <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
-              Citizen science is both an opportunity and a tool! An <i>opportunity</i> for the general public to take part and contribute to science. And a well versed tool for researchers to pool crowd sourced data. Citizen science is the practice of public participation and collaboration for improving scientific endeavours, increasing scientific literacy, supporting education, and better addressing societal needs through scientific evidence. 
+              Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science and a well versed tool for researchers to pool crowd sourced data. Citizen science is the practice of public participation and collaboration for improving scientific endeavours, increasing scientific literacy, supporting education, and better addressing societal needs through scientific evidence.
             </p>
             <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
               Across the world, this process of democratisation of knowledge production brings together people, scientists and policymakers and has made significant contributions to many fields including biodiversity conservation and global change. Starting from project design to policy implementation, the general public has potential roles to play. 
