typing in index and contact

--- a/CcsbiProject/templates/contact.html
+++ b/CcsbiProject/templates/contact.html
@@ -15,8 +15,7 @@
         <div class="row">
             <div class="col-sm-7" >
                 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d980.6558759042683!2d76.34667362852116!3d10.530290799347531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7e49143b9f8ad%3A0x2afb674c11534965!2sKSCSTE%20KFRI!5e0!3m2!1sen!2sin!4v1672137888386!5m2!1sen!2sin"  width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1961.3183234998298!2d76.3474709879789!3d10.529257972095312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7e59732f11133%3A0x8946a109256da059!2sCentre%20for%20Citizen%20Science%20and%20Biodiversity%20Informatics!5e0!3m2!1sen!2sin!4v1676438674351!5m2!1sen!2sin"  width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="col-sm-5" style="margin-top:10%;">
 
