image alt content added

--- a/CcsbiProject/templates/Capacity.html
+++ b/CcsbiProject/templates/Capacity.html
@@ -9,7 +9,7 @@
 <br>
 
 <div class="container">
-    <img src="{% static '/images/capacitybuilding.png' %}" padding-left:25%  width="100%"    alt="...">
+    <img src="{% static '/images/capacitybuilding.png' %}" padding-left:25%  width="100%"    alt="Capacity building">
     
 <br>
 <br>
@@ -30,7 +30,7 @@
 
         </div>
         <div class="col-sm-4" >
-            <img src="{% static '/images/Basics_citsci.JPG' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/Basics_citsci.JPG' %}" padding-left:25%  width="100%"    alt="Basics of Citizen science">
         </div>
 
     </div>
@@ -46,7 +46,7 @@
         </div>
         
         <div class="col-sm-4" >
-            <img src="{% static '/images/taxonomy.png' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/taxonomy.png' %}" padding-left:25%  width="100%"    alt="Taxonomy Workshops">
 
         </div>
 
@@ -65,7 +65,7 @@
 
         </div>
         <div class="col-sm-4" >
-            <img src="{% static '/images/Data_management.jpg' %}" padding-left:25%  width="100%"    alt="...">
+            <img src="{% static '/images/Data_management.jpg' %}" padding-left:25%  width="100%"    alt="Data management, analysis and visualisation">
         </div>
 
     </div>
