--- a/CcsbiProject/templates/Event1.html
+++ b/CcsbiProject/templates/Event1.html
@@ -124,7 +124,7 @@
          
 
           <!--!-->
-          <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
+          <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="CCSBI">
         
           <li class="nav-item {% if navbar == 'home' %} active {% endif %}">
             <a class="nav-link" aria-current="page" href="/home">Home</a>
@@ -203,7 +203,7 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_2.JPG' %}" alt="">
+                    <img src="{% static '/images/Event_2.JPG' %}" alt="Citizen Science workshop - Vivekananda College Kizhoor">
                 </div>
 
             </div>
@@ -211,21 +211,21 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_3.JPG' %}" alt="">
+                    <img src="{% static '/images/Event_3.JPG' %}" alt="Citizen Science workshop - Vivekananda College Kizhoor">
                 </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_4.JPG' %}" alt="">
+                    <img src="{% static '/images/Event_4.JPG' %}" alt="Citizen Science workshop - Vivekananda College Kizhoor">
                 </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/Event_5.JPG' %}" alt="">
+                    <img src="{% static '/images/Event_5.JPG' %}" alt="Citizen Science workshop - Vivekananda College Kizhoor">
                 </div>
 
             </div>
@@ -265,10 +265,10 @@
 
       </div>
       <div class="col-md-3" >
-          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="CCSBI">
       </div>
       <div class="col-sm-3" >
-        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="KFRI">
       </div>
 
       <div class="col-sm-3" >
