--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -92,7 +92,7 @@
         </div>
         
         <div class="col-sm-4" >
-            <img src="{% static '/images/clubtemp.png' %}"   class="imgtag"   alt="...">
+            <img src="{% static '/images/clubtemp.png' %}"   class="imgtag"   alt="Citizen Science Clubs">
 
         </div>
 
@@ -102,7 +102,7 @@
     <br>
     <div class="row">
         <div class="col-sm-4" >
-            <img src="{% static '/images/academic research.svg' %}"  class="imgtag"    alt="...">
+            <img src="{% static '/images/academic research.svg' %}"  class="imgtag"    alt="Academic/Research institutes">
         </div>
         
         <div class="col-sm-8" >
@@ -130,7 +130,7 @@
         </div>
         
         <div class="col-sm-4" >
-            <img src="{% static '/images/NGOs.png' %}"  width="100%"  height= "70%"  style=" margin-top:20%;"  alt="...">
+            <img src="{% static '/images/NGOs.png' %}"  width="100%"  height= "70%"  style=" margin-top:20%;"  alt="NGOs">
 
         </div>
 
@@ -139,7 +139,7 @@
     <br>
     <div class="row">
         <div class="col-sm-4" >
-            <img src="{% static '/images/library.png' %}" class="imgtag"   alt="...">
+            <img src="{% static '/images/library.png' %}" class="imgtag"   alt="Public libraries">
         </div>
         
         <div class="col-sm-8" >
