--- a/CcsbiProject/templates/Projects.html
+++ b/CcsbiProject/templates/Projects.html
@@ -173,7 +173,7 @@
     <div class="col-sm-6">
       <p class="headings">The Fruit Bat Project</p>
       <div class="card " id="bat" >
-        <img href = "#" id="img" src ="{% static '/images/bat2.jpg' %}" style="height: 100%;">
+        <img href = "#" id="img" src ="{% static '/images/bat2.jpg' %}" style="height: 100%;" alt="The Fruit Bat Project">
         <br>
         <p class="text-justify"  id="text"  >
           After the spill of zoonotic diseases like Nipah and covid 19, human attitude towards bats and their roosts has shifted significantly. 
@@ -191,7 +191,7 @@
     <div class="col-sm-6">
       <p class="headings">Invasion watch India</p>
       <div class="card " id="invasion">
-        <img href = "#" id="img" src ="{% static '/images/invasionwatch.jpg' %}" style="height: 100%;">
+        <img href = "#" id="img" src ="{% static '/images/invasionwatch.jpg' %}" style="height: 100%;" alt="Invasion watch India">
         <p class="text-justify"  id="text">
           Across the world, natural habitats are being lost to invasive species. In India, species like <i>Lantana camara </i> and Giant African snails are taking over natural habitats, 
           causing irreversible damages. The distribution and rate of spread of such species should be monitored for their proper management. This project is aimed at mapping invasive 
@@ -210,7 +210,7 @@
     <div class="col-sm-6">
       <p class="headings">Pollinator count</p>
       <div class="card "  id="pollinator">
-        <img href = "#" src ="{% static '/images/pollinator.jpg' %}"  id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/pollinator.jpg' %}"  id="img"  style="height: 100%;" alt="Pollinator count">
         <br>
         <p class="text-justify" id="text">
           Loss of pollinator diversity has started to threaten the ecosystem stability as well as the world economy. 
@@ -226,7 +226,7 @@
     <div class="col-sm-6">
       <p class="headings">Forest Biodiversity database</p>
       <div class="card " id="forestbiodiversitydatabase">
-        <img href = "#" src ="{% static '/images/forestbiodiversitydatabase.jpg' %}" id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/forestbiodiversitydatabase.jpg' %}" id="img"  style="height: 100%;" alt="Forest Biodiversity database">
         <p class="text-justify"  id="text">
           Our tropical climate makes our forests one of the most diverse ecosystems in the world. Effect of anthropogenic influences and climate change is concerning, 
           shouting out the need for frequent monitoring of biodiversity throughout our protected areas. A biodiversity database for each protected area is being developed 
@@ -244,7 +244,7 @@
     <div class="col-sm-6">
       <p class="headings">Institutional-Biodiversity database</p>
       <div class="card " id="localbiodiversity" >
-        <img href = "#" src ="{% static '/images/localbiodiversity.jpeg' %}" id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/localbiodiversity.jpeg' %}" id="img"  style="height: 100%;" alt="Institutional-Biodiversity database">
         <p class="text-justify" id="text">
           Urban wildlife is the least studied biological resource around us. We currently lack data on locality specific urban biodiversity.
            A ward-level urban-biodiversity database is being generated in collaboration with local governing bodies. 
@@ -257,7 +257,7 @@
     <div class="col-sm-6">
       <p class="headings">Riverscaping</p>
       <div class="card " id="localbiodiversity" >
-        <img href = "#" src ="{% static '/images/Riverscaping.jpg' %}" id="img"  style="height: 100%;">
+        <img href = "#" src ="{% static '/images/Riverscaping.jpg' %}" id="img"  style="height: 100%;" alt="Riverscaping">
         <p class="text-justify" id="text">
           The Riverscaping project is aimed at understanding the ecological and environmental importance of riparian habitats. 
           It is one of the most biologically diverse ecotones which acts as a transition zone between two major ecosystems. 
