--- a/CcsbiProject/templates/event2.html
+++ b/CcsbiProject/templates/event2.html
@@ -124,7 +124,7 @@
          
 
           <!--!-->
-          <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="...">
+          <img src="{% static '/images/CCSBI logo 2.png' %}"  width="11%"  style="margin-left: -5%;"   alt="CCSBI">
         
           <li class="nav-item {% if navbar == 'home' %} active {% endif %}">
             <a class="nav-link" aria-current="page" href="/home">Home</a>
@@ -195,7 +195,7 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/event2_1.jpg' %}" alt="">
+                    <img src="{% static '/images/event2_1.jpg' %}" alt="Institutional Biodiversity Assessment - Vallachira panchayath">
                 </div>
 
             </div>
@@ -203,21 +203,21 @@
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/event2_2.jpg' %}" alt="">
+                    <img src="{% static '/images/event2_2.jpg' %}" alt="Institutional Biodiversity Assessment - Vallachira panchayath">
                 </div>
             </div>
         </div>
         <div class="owl-item">
             <div class="card">
                 <div class="img-card">
-                    <img src="{% static '/images/event2_3.jpg' %}" alt="">
+                    <img src="{% static '/images/event2_3.jpg' %}" alt="Institutional Biodiversity Assessment - Vallachira panchayath">
                 </div>
             </div>
         </div>
         <div class="owl-item">
           <div class="card">
               <div class="img-card">
-                  <img src="{% static '/images/event2_1.jpg' %}" alt="">
+                  <img src="{% static '/images/event2_1.jpg' %}" alt="Institutional Biodiversity Assessment - Vallachira panchayath">
               </div>
           </div>
       </div>
@@ -257,10 +257,10 @@
 
       </div>
       <div class="col-md-3" >
-          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="CCSBI">
       </div>
       <div class="col-sm-3" >
-        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="kfri">
       </div>
 
       <div class="col-sm-3" >
