--- a/CcsbiProject/templates/Opportunities.html
+++ b/CcsbiProject/templates/Opportunities.html
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-5">
 
-            <img src="{% static '/images/oppo1.png' %}"  alt="..." width="100%" height="100%">
+            <img src="{% static '/images/oppo1.png' %}"  alt="Biodiversity internship programme" width="100%" height="100%">
 
         </div>
         <div class="col-md-7">
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-5">
             
-            <img src="{% static '/images/oppo2.jpeg' %}"  alt="..." width="100%" height="100%">
+            <img src="{% static '/images/oppo2.jpeg' %}"  alt="MSc / BSc dissertation" width="100%" height="100%">
 
         </div>
 
@@ -57,7 +57,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <img src="{% static '/images/oppo3.png' %}"  alt="..." width="100%" height="100%">
+            <img src="{% static '/images/oppo3.png' %}"  alt="Outreach interns" width="100%" height="100%">
 
         </div>
         <div class="col-md-7">
