--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -181,7 +181,7 @@
 
 
 <div class="container">
-    <img id="img" src="{% static '/images/head.svg' %}" style="margin-left: 5%;"  alt="...">
+    <img id="img" src="{% static '/images/head.svg' %}" style="margin-left: 5%;"  alt="CCSBI">
 
 </div>
 <div  class="container-fluid" style="padding: 0px;">
@@ -235,7 +235,7 @@
 <div class="container">
 
 
-    <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
+    <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="The Centre for Citizen Science and Biodiversity Informatics">
     <p class="text-center" style=" font-family: Merriweather;font-size: 22px;"><b><i>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn? You are at the right place!
       <span style="color: #0E5D7A;" > The Centre for Citizen Science and Biodiversity Informatics </span> will guide you to be a citizen scientist! </b ></i></p>
     <br/>
@@ -259,12 +259,12 @@
             </p>
         </div>
         <div class="col-md-5" >
-            <img src="{% static '/images/home2.jpg' %}" padding-left:25%  width="150%"    alt="...">
+            <img src="{% static '/images/home2.jpg' %}" padding-left:25%  width="150%"    alt="What is Citizen Science">
         </div>
     </div>
     <div class="row">
         <div class="col-md-6" >
-            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="100%"     alt="...">
+            <img src="{% static '/images/home3.jpg' %}" padding-left:25%  width="100%"     alt="Citizen Science In India">
         </div>
         <div class="col-md-6" >  
 
@@ -394,7 +394,7 @@
             </p>
         </div>
         <div class="col-md-7" >
-            <img src="{% static '/images/home5.png' %}"  width="100%" height="100%"   alt="...">
+            <img src="{% static '/images/home5.png' %}"  width="100%" height="100%"   alt="CitSci Network">
         </div>
     </div>
     
@@ -429,10 +429,10 @@
 
       </div>
       <div class="col-md-3" >
-          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="...">
+          <img src="{% static '/images/LOGO.png' %}"  width="100%"    alt="CCSBI">
       </div>
       <div class="col-sm-3" >
-        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="...">
+        <img src="{% static '/images/logopng.png' %}"  width="80%"    alt="KFRI">
       </div>
 
       <div class="col-sm-3" >
